# rez-opensubdiv

./: CMakeLists.txt  package.py
cmake/: opensubdiv.cmake
